--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL='mysql://okmts6a5qhi6y2jbtugq:pscale_pw_Wa2n3Ig7QhnuPDjdSOCNJN7KMrsWLvd7LjxulUWwXID@aws.connect.psdb.cloud/belajar?sslaccept=strict'
-BASE_URL="http://localhost:3000"
+DATABASE_URL='mysql://dzi1i6flpk9k2q9mg7y9:pscale_pw_JZEOlaw3Mf2utc1Q3bD51S1IZ6RGHKBck977sQDtqTm@aws.connect.psdb.cloud/belajar?sslaccept=strict'
+BASE_URL="https://nextjs13crud-c9irl4lma-tokyo17.vercel.app"
