--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL='mysql://agfl4fuvpcbg2bh1cgjx:pscale_pw_P07oLhIuAZmEscryvihIcFCHMupVreo9joxjMM5cri@aws.connect.psdb.cloud/belajar?sslaccept=strict'
-BASE_URL="http://localhost:3000"
+DATABASE_URL='mysql://8gkpq8b4oli2ytoowr6m:pscale_pw_fPQulAr4xzgti0Vyp8L5MsW5DLDIOCq42zum8Dvr7HV@aws.connect.psdb.cloud/belajar?sslaccept=strict'
+BASE_URL="http://127.0.0.1:3000"
