--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL='mysql://8gkpq8b4oli2ytoowr6m:pscale_pw_fPQulAr4xzgti0Vyp8L5MsW5DLDIOCq42zum8Dvr7HV@aws.connect.psdb.cloud/belajar?sslaccept=strict'
+DATABASE_URL='mysql://lhg71ro0mmt61q1wsyhy:pscale_pw_DeXITuN66xYwA59dd2e4JBZ5YEmL1pBRTgy7S2BCxsX@aws.connect.psdb.cloud/belajar?sslaccept=strict'
 BASE_URL="http://127.0.0.1:3000"
