--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-DATABASE_URL='mysql://lhg71ro0mmt61q1wsyhy:pscale_pw_DeXITuN66xYwA59dd2e4JBZ5YEmL1pBRTgy7S2BCxsX@aws.connect.psdb.cloud/belajar?sslaccept=strict'
+NAME="ARUM"
+DATABASE_URL='mysql://7xuatu3bj2ziu83p11rv:pscale_pw_Mkkok46OYL0cr6xLIQNTsWpX1S1IGeiRyqoOrmxhmYz@aws.connect.psdb.cloud/belajar?sslaccept=strict'
 BASE_URL="http://127.0.0.1:3000"
