--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NAME="ARUM"
-DATABASE_URL='mysql://7xuatu3bj2ziu83p11rv:pscale_pw_Mkkok46OYL0cr6xLIQNTsWpX1S1IGeiRyqoOrmxhmYz@aws.connect.psdb.cloud/belajar?sslaccept=strict'
+DATABASE_URL='mysql://u0juouivfi30f5zew6c7:pscale_pw_9uaL9wKeZA2TMadczxCVGD1rr3XJdBXZGHzlK1MV2Bf@aws.connect.psdb.cloud/belajar?sslaccept=strict'
 BASE_URL="http://127.0.0.1:3000"
