--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NAME="ARUM"
-DATABASE_URL='mysql://u0juouivfi30f5zew6c7:pscale_pw_9uaL9wKeZA2TMadczxCVGD1rr3XJdBXZGHzlK1MV2Bf@aws.connect.psdb.cloud/belajar?sslaccept=strict'
+DATABASE_URL='mysql://5l45kazx4ffdie5c8zkz:pscale_pw_CBAf8of05NfTr1kgC6gwrEWCpMgsxJgmDxzEzj9hUUY@aws.connect.psdb.cloud/belajar?sslaccept=strict'
 BASE_URL="http://127.0.0.1:3000"
