--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NAME="ARUM"
-DATABASE_URL='mysql://5l45kazx4ffdie5c8zkz:pscale_pw_CBAf8of05NfTr1kgC6gwrEWCpMgsxJgmDxzEzj9hUUY@aws.connect.psdb.cloud/belajar?sslaccept=strict'
+DATABASE_URL='mysql://xrx80j17wsemlss1f7ru:pscale_pw_ETZHkEWdSwAzR2x7tk3i7Ux6tdF2delULgeEnqmTw1o@aws.connect.psdb.cloud/belajar?sslaccept=strict'
 BASE_URL="http://127.0.0.1:3000"
