--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NAME="ARUM"
-DATABASE_URL='mysql://xrx80j17wsemlss1f7ru:pscale_pw_ETZHkEWdSwAzR2x7tk3i7Ux6tdF2delULgeEnqmTw1o@aws.connect.psdb.cloud/belajar?sslaccept=strict'
+DATABASE_URL='mysql://ylseooqbuxxop1ad6m75:pscale_pw_6xYGE82vKRAujNuV1mBr5ZTjFjzyUwBdg6qSSGGHGDm@aws.connect.psdb.cloud/belajar?sslaccept=strict'
 BASE_URL="http://127.0.0.1:3000"
