--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NAME="ARUM"
-DATABASE_URL='mysql://ylseooqbuxxop1ad6m75:pscale_pw_6xYGE82vKRAujNuV1mBr5ZTjFjzyUwBdg6qSSGGHGDm@aws.connect.psdb.cloud/belajar?sslaccept=strict'
+DATABASE_URL='mysql://haxcn1kby8uaksfjr3lt:pscale_pw_ooNusoLPlOhXP5TIEB2RAg2bdAkOhex5fAR4IknOmAj@aws.connect.psdb.cloud/belajar?sslaccept=strict'
 BASE_URL="http://127.0.0.1:3000"
