--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NAME="ARUM"
-DATABASE_URL='mysql://wr6cm6drfuwxbm8y4wd5:pscale_pw_j4RBoAQ4jiDWUbHSXyJq5ocubXFcWGLXy4JQnHMeq25@aws.connect.psdb.cloud/belajar?sslaccept=strict'
+DATABASE_URL='mysql://50hymtkgr6tc6ur4q09r:pscale_pw_liSAUxOK13N7LsF2IHQNj2ftjqvMeM9b24ZarTsPZyp@aws.connect.psdb.cloud/belajar?sslaccept=strict'
 BASE_URL="http://127.0.0.1:3000"
